force-app/main/default/objects/Parametros_DAU__mdt/Parametros_DAU__mdt.object-meta.xml
<CustomObject>
    <label>Parámetros DAU</label>
    <pluralLabel>Parámetros DAU</pluralLabel>
</CustomObject>