force-app/main/default/objects/Parametros_DAU__mdt/fields/DAU_Contrasenia__c.field-meta.xml
<CustomField>
    <fullName>DAU_Contrasenia__c</fullName>
    <label>Contraseña</label>
    <length>50</length>
    <type>Text</type>
</CustomField>