force-app/main/default/objects/Parametros_DAU__mdt/fields/DAU_Dias__c.field-meta.xml
<CustomField>
    <fullName>DAU_Dias__c</fullName>
    <label>Días</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>