force-app/main/default/objects/Parametros_DAU__mdt/fields/DAU_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>DAU_EndPoint__c</fullName>
    <description>Endpoint del servicio a consumir.</description>
    <inlineHelpText>Endpoint del servicio a consumir.</inlineHelpText>
    <label>EndPoint</label>
    <type>Url</type>
</CustomField>