force-app/main/default/objects/Parametros_DAU__mdt/fields/DAU_Token__c.field-meta.xml
<CustomField>
    <fullName>DAU_Token__c</fullName>
    <label>Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>