force-app/main/default/objects/Parametros_DAU__mdt/fields/DAU_Usuario__c.field-meta.xml
<CustomField>
    <fullName>DAU_Usuario__c</fullName>
    <label>Usuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>