force-app/main/default/objects/Parametros_DAU__mdt/fields/Monto_a_Disminuir__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_Disminuir__c</fullName>
    <label>Monto a Disminuir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>